--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,7 +22,9 @@
 
 
 <div class="page__footer-copyright">
-  <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=kTMcfgVSl2wlhaC8eXnmS48wmgbERZvGUS8N-iCZAiY&cl=ffffff&w=a"></script>
+  <div style="width: 25%; max-width: 300px;">
+    <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=kTMcfgVSl2wlhaC8eXnmS48wmgbERZvGUS8N-iCZAiY&cl=ffffff&w=a"></script>
+</div>
   &copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}, {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://github.com/academicpages/academicpages.github.io">AcademicPages</a>, a fork of <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.<br />
   Site last updated {{ "now" | date: '%Y-%m-%d' %}}
 </div>
